fix: correcao do composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
-    "name": "allison/phppoo",
     "autoload": {
         "psr-4": {
-            "Allison\\Phppoo\\": "App/"
+            "App\\": "App/"
         }
     },
     "authors": [
