--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,7 @@
             "email": "gierdiaz@hotmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    }
 }
